# aeon_mecha

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .profile  .python-version  CITATION.cff  DEPLOY_INSTRUCTIONS.md  Experiment0.1.yml  LICENSE.md  README.md  aeon.py  changelog.md  contributing.md  env.yml  environment.yml  experiment0.py  init_proj.sh  license.md  manifest.in  prod_dj_local_conf.json  prod_spike_sorting.sh  pyproject.toml  pytest.ini  readme.md  readthedocs.yml  requirements.txt  run_aeon_spike_sorting.sh  sample_dj_local_conf.json  setup.cfg  setup.py  social01_block_analysis.ipynb  tox.ini
.github/: dependabot.yml
.github/workflows/: actions.yml  build_env_run_tests.yml  codebook-profile-build-caller.yaml  codebook-profile-build.yaml  docker-aeon-ingest.yml  docker-aeon-mecha.yml  gpt_pr_review.yml  lint_and_test.yml  squash_merge_to_main.yml  squash_merge_to_prod.yml  test_dj_pipeline.yml  worker-ami-build.yaml  worker-build-caller.yaml
aeon/: README.md  __init__.py  api.py  preprocessing.py  util.py  utils.py
aeon/aeon_pipeline/: __init__.py  analysis.py  experiment.py  lab.py  paths.py  session.py  subject.py  tracking.py
aeon/analysis/: block_plotting.py  dj_social_block_plots.ipynb  dj_social_blocks_and_overall_plots.ipynb  movies.py  overall_plots_Orsi.ipynb  patches.py  plotting.py  social_behaviour_detection.py  utils.py
aeon/analyze/: movies.py  patches.py  plotting.py  socialexperiment_helpers.py
aeon/dj_pipeline/: README.md  __init__.py  acquisition.py  analysis.py  analysis_feeder.py  device_stream.py  ephys.py  ephys_processing.py  experiment.py  lab.py  paths.py  plotting.py  processed_feeder.py  processed_movement.py  qc.py  report.py  spike_sorting.py  spike_sorting_curation.py  streams.py  streams_maker.py  subject.py  tracking.py  visit_report.py
aeon/io/: __init__.py  api.py  device.py  devices.py  harp_config.py  reader.py  schema.py  stream.py  streams.py  util.py  utils.py  video.py
aeon/metadata/: social_02.py
aeon/plotting/: plot_functions.py
aeon/preprocess/: animal_position_tracking.bonsai  animal_position_tracking.py  animal_position_tracking.slurm  api.py  exp0_api.py  job.slurm  utils.py
aeon/preprocessing/: __init__.py  api.py  api2.py
aeon/processing/: foraging.py
aeon/qc/: video.py
aeon/query/: api.py  exp0_api.py  travelledDistance.py  utils.py
aeon/schema/: __init__.py  core.py  dataset.py  ephys.py  foraging.py  foragingabc.py  ingestion_schemas.py  octagon.py  schemas.py  social.py  social01.py  social_01.py  social_02.py  social_03.py  streams.py
aeon/signalProcessing/: utils.py
aeon/storage/: filesStorageMgr.py  sqlStorageMgr.py  storageMgr.py
aeon/util/: helpers.py  plotting.py  utils.py
bonsai-sleap/: bonsai_sleap_automated.py  bonsai_sleap_automated_individual_sessions.py  bonsai_sleap_automated_social_sessions.py
bonsai-sleap/bonsai/: Bonsai.config  NuGet.config
bonsai-sleap/workflows/: example_sleap_to_harp.bonsai
docker/: Dockerfile  README.md  compose  compose.sh  cron_script.bash  docker-compose-build-local.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  ingest-logs.bash  template.env
docker/.devcontainer/: devcontainer.json  vscode-open-dev-container
docker/image/: .datajoint_config.json  Dockerfile  aeon_env.lock.yml  apt_requirements.txt  conda_env.yml  docker-compose-dev.yml  sudo-conda-run
docker/shared/: aeon_env.linuxamd64.lock.yml  aeon_env.lock.yml  aeon_env.osxarm64.lock.yml
docs/: PIPELINE_LOCAL_DEPLOYMENT.md  glossary.tsv  running_golden_tests_on_hpc.md  using_datajoint_via_jupyterhub.md  using_hpc_jupyterhub.md  using_online_dashboard.md
docs/callgraphs/: readme.md
docs/devs/: generating_callgraphs.md  readme.md  updating_env_packages.md
docs/env_setup/: anaconda_conda_setup.md  miniconda_conda_remote_setup.md  pip_venv_setup.md  pyenv_poetry_setup.md  swc_hpc_setup.md
docs/ephys_guide/: bugs_found.md  ephys_guide.ipynb  step00_setup.md  step01_register_experiment.py  step02_define_blocks.py  step03_spike_sorting.py  step04_curation.md  step04_post_sorting_and_curation.py  step05_unit_matching.py  step06_analysis_examples.py
docs/ephys_runbooks/: bugs_found.md  ephys_runbook.ipynb  run_aeon_spike_sorting.py  run_aeon_spike_sorting.sh  step00_setup.md  step01_register_experiment.py  step02_define_blocks.py  step03_spike_sorting.py  step04_post_sorting_and_curation.py  step05_unit_matching.py  step06_analysis_examples.py
docs/examples/: arena0.py  dataset.py  dj_compute_bouts.ipynb  dj_data_loading.ipynb  dj_example_notebook.ipynb  dj_example_octagon1_experiment.ipynb  dj_fetching_data.ipynb  dj_querying_data.ipynb  dj_social_analysis.ipynb  exp0.py  exp01_activity.py  exp01_activity2.py  exp01_dropframes.py  exp01_patchmovies.py  exp01_patchsummary.py  exp0_tracking.py  exp0_videos.py  for_joaquin.py  get_harp_stream_event_bitmask.ipynb  io_api_example.ipynb  jai_160721_sc_meeting_analysis.py  jb_gl_reorg_api_examples.py  mouse_dist_travelled.py  patch_preference.py  plot_arena0figs.py  reorg_api_examples.py  schema.py  social.ipynb  social02_block_analysis.ipynb  tracking.bonsai  understanding_aeon_data_architecture.ipynb
docs/notebooks/: social_experiments_block_analysis.ipynb
docs/specs/: PLAN_COMPRESSION_TESTING.md  REPORT_COMPRESSION_RESULTS.md  SPEC_EPHYS_COMPRESSION.md  SPEC_EPHYS_PIPELINE.md  SPEC_EPHYS_TESTING.md  SPEC_ONIX_IMU_PIPELINE.md  SPEC_READ_COMPRESSED.md  SPEC_SLURM_AUTOMATION.md  SPEC_STREAMS_MAKER.md  SPEC_TESTING.md  (+2 more)
env_config/: .python-version  env.yml  env_dev.yml  env_gpu.yml  env_macos.yml  requirements.txt  requirements_dev.txt
notebooks/: Example_queries_demo.ipynb  Example_queries_exp0.1.ipynb  Example_queries_exp0.1_b.ipynb  Example_queries_exp0.ipynb  diagram.ipynb
scripts/: compression_report.py  test_load_stream.py
sleap_data_processing_scripts/: extract_patch_videos.ipynb  video_and_h5_splitter.ipynb
sleap_id_matching/: sleap_id_matching.ipynb
tests/: conftest.py  readme.md  test.ipynb  test_preprocessing_api.py  threshold.ipynb
(+280 files in other folders)
