[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon_mecha"
version = "0.4.0"
requires-python = ">=3.11,<3.13"
description = '''
    Code for managing acquired data from Project Aeon experiments. Includes general file IO,
    data QC, querying, and analysis modules.
'''
authors = [
  { name = "Jai Bhagat", email = "jkbhagatio@gmail.com" },
  { name = "Goncalo Lopes", email = "g.lopes@neurogears.org" },
  { name = "Thinh Nguyen", email = "thinh@datajoint.com" },
  { name = "Joseph Burling", email = "joseph@datajoint.com" },
  { name = "Chang Huan Lo", email = "changhuan.lo@ucl.ac.uk" },
  { name = "Jaerong Ahn", email = "jaerong.ahn@datajoint.com" },
]
license = { file = "license.md" }
readme = "readme.md"
dependencies = [
  "bottleneck>=1.2.1,<2",
  "datajoint>=2.1.0",
  "swc-aeon>=0.1.0",
  "fastparquet",
  "graphviz",
  "ipykernel",
  "jupyter",
  "jupyterlab",
  "numba>=0.46.0, <1",
  "numexpr>=2.6.8, <3",
  "pillow",
  "plotly",
  "pyarrow",
  "pydotplus",
  "pymysql",
  "pyyaml",
  "scikit-learn",
  "scipy",
  "seaborn",
  "xarray>=0.12.3",
]

[project.optional-dependencies]
gpu = ["cupy", "dask"]
spike_sorting = [
  "spikeinterface[full]>=0.104.0",
  "spython", 
  "cuda-python", 
  "spikeinterface-gui", 
  "PySide6<6.8", 
  "pyqtgraph"
]

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  "bandit",
  "ipdb",
  "pre-commit",
  "pydantic",
  "pyright",
  "ruff",
]
test = [
  "pytest>=7.0",
  "pytest-cov",
  "testcontainers[mysql]>=3.7",
]
test-golden = [
  { include-group = "test" },
  "swc-aeon-rigs-foragingabc",
]
docs = [
  "sphinx",
]

[project.urls]
Homepage = "https://sainsburywellcomecentre.github.io/aeon_docs/"
Repository = "https://github.com/sainsburyWellcomeCentre/aeon_mecha"
Documentation = "https://sainsburywellcomecentre.github.io/aeon_docs/"
DataJoint = "https://docs.datajoint.org/"

[tool.setuptools.packages.find]
include = ["aeon*"]

[tool.ruff]
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "D",
  "UP",
  "S",
  "B",
  "A",
  "C4",
  "ICN",
  "PIE",
  "PT",
  "SIM",
  "PL",
]
line-length = 108
lint.ignore = [
  "E731",
  "PLR0912", 
  "PLR0913",
  "PLR0915",
]
extend-exclude = [
  ".git",
  ".github",
  ".idea",
  "*.ipynb",
  ".vscode",
  "aeon/dj_pipeline/streams.py",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D101",    # skip adding docstrings for public classes
  "D102",    # skip adding docstrings for public methods
  "D103",    # skip adding docstrings for public functions
  "S101",    # skip using assert
  "S105",    # skip checking for hardcoded password str (used in testcontainers MySQL setup)
  "S106",    # skip checking for hardcoded password in func arg (used in testcontainers MySQL setup)
  "S110",    # skip try-except-pass (used in test teardown)
  "SIM105",  # skip contextlib.suppress suggestion
  "PLC0415", # skip checking `import` at the top-level of a file
  "PLR2004", # skip checking for magic values
]
"aeon/schema/*" = [
  "D101",    # skip adding docstrings for schema classes
  "D106",    # skip adding docstrings for nested streams
]
"aeon/dj_pipeline/*" = [
  "D101",    # skip adding docstrings for schema classes
  "D106",    # skip adding docstrings for nested streams
  "S324",    # skip hashlib insecure hash function (md5) warning
  "F401",    # skip incorrectly detecting `aeon.dj_pipeline` dependencies as unused
  "PLC0415", # skip checking `import` at the top-level of a file
]
"tests/dj_pipeline/*" = [
  "PLC0415", # skip checking `import` at the top-level of a file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
useLibraryCodeForTypes = false
reportMissingImports = "none"
reportImportCycles = "warning"
reportOperatorIssue = "none"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnusedExpression = "error"
reportMatchNotExhaustive = "error"
reportPossiblyUnboundVariable = "warning"
# *Note*: we may want to set all 'ReportOptional*' rules to "none", but leaving 'em default for now
venvPath = "."
venv = ".venv"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "tests", "docs", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: Unit tests (no database, synthetic data)",
  "integration: Integration tests (DB via testcontainers, synthetic or golden datasets)",
  "specialized: Specialized tests (GPU/high-RAM, golden datasets)",
]

[tool.uv.sources]
swc-aeon = { git = "https://github.com/SainsburyWellcomeCentre/aeon_api.git", branch = "main" }
swc-aeon-rigs-foragingabc = { git = "https://github.com/SainsburyWellcomeCentre/aeon_exp_foragingABC.git", branch = "main" }
