[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon_mecha"
version = "0.4.5"
requires-python = ">=3.11,<3.13"
description = '''
    Code for managing acquired data from Project Aeon experiments. Includes general file IO,
    data QC, querying, and analysis modules.
'''
authors = [
  { name = "Jai Bhagat", email = "jkbhagatio@gmail.com" },
  { name = "Goncalo Lopes", email = "g.lopes@neurogears.org" },
  { name = "Thinh Nguyen", email = "thinh@datajoint.com" },
  { name = "Joseph Burling", email = "joseph@datajoint.com" },
  { name = "Chang Huan Lo", email = "changhuan.lo@ucl.ac.uk" },
  { name = "Jaerong Ahn", email = "jaerong.ahn@datajoint.com" },
]
license = { file = "license.md" }
readme = "readme.md"
dependencies = [
  "bottleneck>=1.2.1,<2",
  "datajoint>=2.2.2",
  "swc-aeon>=0.1.0",
  "fastparquet",
  "graphviz",
  "ipykernel",
  "jupyter",
  "jupyterlab",
  "numba>=0.46.0, <1",
  "numexpr>=2.6.8, <3",
  "pillow",
  "plotly",
  "pyarrow",
  "pydotplus",
  "pymysql",
  "pyyaml",
  "scikit-learn",
  "scipy",
  "seaborn",
  "xarray>=0.12.3",
]

[project.optional-dependencies]
gpu = ["cupy", "dask"]
spike_sorting = [
  "spikeinterface[full]>=0.104.0",
  "spython", 
  "cuda-python", 
  "spikeinterface-gui", 
  "PySide6<6.8", 
  "pyqtgraph"
]

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
  "bandit",
  "ipdb",
  "pre-commit",
  "pydantic",
  "pyright",
  "ruff",
]
test = [
  "pytest>=7.0",
  "pytest-cov",
  "testcontainers[mysql]>=3.7",
]
test-golden = [
  { include-group = "test" },
  "swc-aeon-rigs-foragingabc",
]
docs = [
  "sphinx",
]

[project.urls]
Homepage = "https://sainsburywellcomecentre.github.io/aeon_docs/"
Repository = "https://github.com/sainsburyWellcomeCentre/aeon_mecha"
Documentation = "https://sainsburywellcomecentre.github.io/aeon_docs/"
DataJoint = "https://docs.datajoint.org/"

[tool.setuptools.packages.find]
include = ["aeon*"]

[tool.ruff]
lint.select = [
  "E",
  "W",
  "F",
  "I",
  "D",
  "UP",
  "S",
  "B",
  "A",
  "C4",
  "ICN",
  "PIE",
  "PT",
  "SIM",
  "PL",
]
line-length = 108
lint.ignore = [
  "E731",
  "PLR0912", 
  "PLR0913",
  "PLR0915",
]
extend-exclude = [
  ".git",
  ".github",
  ".idea",
  "*.ipynb",
  ".vscode",
  "aeon/dj_pipeline/streams.py",
  "docs",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D101",    # skip adding docstrings for public classes
  "D102",    # skip adding docstrings for public methods
  "D103",    # skip adding docstrings for public functions
  "S101",    # skip using assert
  "S105",    # skip checking for hardcoded password str (used in testcontainers MySQL setup)
  "S106",    # skip checking for hardcoded password in func arg (used in testcontainers MySQL setup)
  "S110",    # skip try-except-pass (used in test teardown)
  "SIM105",  # skip contextlib.suppress suggestion
  "PLC0415", # skip checking `import` at the top-level of a file
  "PLR2004", # skip checking for magic values
]
"aeon/schema/*" = [
  "D100",    # skip module docstring (schema modules are tiny)
  "D101",    # skip adding docstrings for schema classes
  "D102",    # skip method docstrings (mostly @data_reader stubs)
  "D106",    # skip adding docstrings for nested streams
  "D107",    # skip __init__ docstrings (Pydantic device subclasses)
  "E402",    # @data_reader and Pydantic patterns sometimes import below code
  "E501",    # long lines from inline Binary/columns spec
]
"aeon/dj_pipeline/*" = [
  "D101",    # skip adding docstrings for schema classes
  "D106",    # skip adding docstrings for nested streams
  "S324",    # skip hashlib insecure hash function (md5) warning
  "F401",    # skip incorrectly detecting `aeon.dj_pipeline` dependencies as unused
  "PLC0415", # skip checking `import` at the top-level of a file
  "PLR2004", # skip checking for magic values
]
# Legacy spike-sorting modules predate the current docstring/style rules;
# leaving the rules off until a dedicated cleanup pass.
"aeon/dj_pipeline/spike_sorting.py" = [
  "D100",    # missing module docstring
  "D102",    # missing public method docstring
  "D205",    # blank-line-between-summary-and-description
  "E501",    # line too long
  "S101",    # use of assert
  "UP035",   # typing.Dict/List/Tuple deprecated (legacy types)
  "PLW2901", # `for` loop variable overwritten by inner assignment
  "PLC0206", # iterating dict without `.items()`
]
"aeon/dj_pipeline/spike_sorting_curation.py" = [
  "D100",
  "D102",
  "E501",
  "SIM102",  # nested if statements
  "B904",    # raise within except without `from`
]
"aeon/dj_pipeline/scripts/*" = [
  "D100",    # missing module docstring (one-off scripts)
  "D103",    # missing function docstring
  "B904",    # raise ... from inside except
  "E501",
  "E741",    # ambiguous variable name in numpy-heavy code
  "S607",    # starting process with partial path
]
"tests/dj_pipeline/*" = [
  "PLC0415", # skip checking `import` at the top-level of a file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
useLibraryCodeForTypes = false
reportMissingImports = "none"
reportImportCycles = "warning"
reportOperatorIssue = "none"
# Streams tables (FeederEncoder, CameraVideo, etc.) are dynamically generated
# from the Pydantic device catalog at runtime, so static analysis can't see them.
reportAttributeAccessIssue = "none"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
# DataJoint primary key / fetch return types confuse pyright; legacy modules
# (spike_sorting, subject, tracking) trip these. Downgrade until a dedicated
# typing pass.
reportArgumentType = "warning"
reportReturnType = "warning"
reportRedeclaration = "warning"
reportIndexIssue = "warning"
reportGeneralTypeIssues = "warning"
reportUnnecessaryComparison = "warning"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportUnusedExpression = "error"
reportMatchNotExhaustive = "error"
reportPossiblyUnboundVariable = "warning"
# *Note*: we may want to set all 'ReportOptional*' rules to "none", but leaving 'em default for now
venvPath = "."
venv = ".venv"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "tests", "docs", ".venv", "scratch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests/fixtures/ephys"]
markers = [
  "unit: Unit tests (no database, synthetic data)",
  "integration: Integration tests (DB via testcontainers, synthetic or golden datasets)",
  "specialized: Specialized tests (GPU/high-RAM, golden datasets)",
]

[tool.uv.sources]
swc-aeon = { git = "https://github.com/SainsburyWellcomeCentre/aeon_api.git", branch = "main" }
swc-aeon-rigs-foragingabc = { git = "https://github.com/SainsburyWellcomeCentre/aeon_exp_foragingABC.git", branch = "main" }
