## This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = aeon
version = 0.0.2
description = Code for managing acquired data. Includes preprocessing, querying, and analysis modules.
author =
author_email =
license =
long_description = file: read.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/projectAeon/aeon
project_urls =
    Documentation = https://github.com/projectAeon/aeon
#    Source =
#    Changelog =
#    Tracker =
#    Conda-Forge =
#    Download =
#    Twitter =

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Alpha
    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Minimum requirements. Expect users to use conda for complete list
install_requires =
    datajoint
    graphviz
    jupyterlab
    plotly
    pyyaml
    scipy


[options.packages.find]
where = .
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install aeon[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    aeon_ingest = aeon.dj_pipeline.ingest.process:cli

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this py.test issue.
addopts =
    --cov aeon --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 79
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
