# Legacy setup file for aeon_mecha.
# This file should be deleted after this PR is released: https://github.com/python-poetry/poetry-core/pull/182

[metadata]
name = aeon_mecha
version = 0.0.0

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.

[options.packages.find]
where = .
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    aeon_ingest = aeon.dj_pipeline.ingest.process:cli
